# Libro_Fundamentos_Programacion

./: .buildinfo  README.html  _config.yml  _toc.yml  conf.py  demostraciones.html  genindex.html  index.html  intro.html  notebooks.html  objects.inv  prob4.html  py4.html  py7.html  references.bib  requirements.txt  search.html  searchindex.js  setup.cfg  setup.py  tabs.html  tutorial.html
.doctrees/: Encuesta.doctree  PuebasTabs.doctree  README.doctree  demostraciones.doctree  environment.pickle  intro.doctree  notebooks.doctree  prob4.doctree  py4.doctree  py7.doctree  tabs.doctree  tutorial.doctree
.doctrees/Python/: Intro_Python.doctree
.github/workflows/: book.yml  main.yml  mainFundamentos.yml
Autocodificadores/Cuadernos/: Noise_Elimination_Conv.html  ae_Autoencoder_Colorizing.html  ae_Eliminacion_ruido_MNIST.html  ae_Example_Dense_mnist.html  descripcion.html
Autocodificadores/Datos/: descripcion.html
Autocodificadores/Imagenes/: descripcion.html
Fundamentacion_Estadistica/Cuadernos/: Prob_Conceptos_Basicos.html  Prob_Distribuciones_continuas.html  Prob_Var_Prob_conjunta.html  Prob_Variables_Aleatorias.html  Regresión-Lineal-Pyton-Copy1.html  descripcion.html  ti_Teoria_Informacion.html
Fundamentacion_Matematica/Cuadernos/: Intro_Tensores_I.html  Intro_Tensores_II.html  Optimization_1.html  Optimization_2.html  Tensor_Distribucion_Prob.html  am-sdg.html  am_intro_regresion.html  cal_derivadas.html  mod_Ejemplo_Modelamiento.html  mod_Modelamiento.html
Fundamentos de Programación/Cuadernos/: descripcion.html
Fundamentos de Programación/Imagenes/: descripcion.html
Fundamentos de Programación/Scripts/: descripcion.html
Inicio/Cuadernos/: Consideraciones.html  Consideraciones.ipynb
Introduccion/Imagenes/: Imagenes.html
Machine_Learning/Cuadernos/: ACM.html  ACP.html  ACS.html  AprendizajeNoSupervisado.html  BreveIntroduccion2R.html  am-logistico-keras-cancer.html  am_regresion_Keras.html  (+4 more)
Python/: Colecciones.ipynb  Intro_Python.html  Intro_Python.ipynb  La API tf.data.html  La API tf.data.ipynb  Taller_Numpy.ipynb  Taller_Pandas.ipynb  py1.ipynb  py2.ipynb  py3.ipynb  py4.ipynb  py5.ipynb
Pytorch/: Pythorch_01.ipynb  Pythorch_02.ipynb  Pythorch_03.ipynb
_sources/: Encuesta.ipynb  PuebasTabs.ipynb  README.md  demostraciones.ipynb  prob4.ipynb  py4.ipynb  py7.ipynb  tabs.md  tutorial.ipynb
_static/: documentation_options.js  language_data.js
(+279 files in other folders)
